// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message page render should render the initial state of the page 1`] = `
<base-page>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class="is-active"
      >
        <a>
          Sign
        </a>
      </li>
       
      <li
        class=""
      >
        <a>
          Verify
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message />
   
  <verify-message
    style="display: none;"
  />
</base-page>
`;

exports[`Message page render should set Sign tab 1`] = `
<base-page>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class="is-active"
      >
        <a>
          Sign
        </a>
      </li>
       
      <li
        class=""
      >
        <a>
          Verify
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message />
   
  <verify-message
    style="display: none;"
  />
</base-page>
`;

exports[`Message page render should set Verify tab 1`] = `
<base-page>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Sign
        </a>
      </li>
       
      <li
        class="is-active"
      >
        <a>
          Verify
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message
    style="display: none;"
  />
   
  <verify-message
    style=""
  />
</base-page>
`;
